--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/index.css">
   <title>José Gersain</title>
 </head>
 <body>
+  <p>this is shit</p>
   <header class="header">
     <img src="./images/LOGO.png" width="70" height="20" alt="Logo">
     <button aria-label="Curriculum">Curriculum</button>
