Add simple button styles

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <title>José Gersain</title>
 </head>
 <body>
-  <p>this is shit</p>
   <header class="header">
     <img src="./images/LOGO.png" width="70" height="20" alt="Logo">
-    <button aria-label="Curriculum">Curriculum</button>
+    <button class="button" aria-label="Curriculum">Curriculum</button>
+    <button class="button is-secondary" aria-label="Curriculum">Curriculum</button>
   </header>
 </body>
 </html>
