Add button icon component

--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
     <button class="button" aria-label="Curriculum">Curriculum</button>
     <button class="button is-secondary" aria-label="Curriculum">Curriculum</button>
   </header>
+  <a class="button-icon" href="tel:5549361867"><img src="./images/icon-phone.svg" alt="icono telefono"></a>
+  <a class="button-icon" href=""><img src="./images/icon-important_mail.svg" alt="icono mail"></a>
+  <a class="button-icon" href=""><img src="./images/icon-instagram.svg" alt="icono instagram"></a>
+  <a class="button-icon" href=""><img src="./images/icon-twitter_squared.svg" alt="icono twitter"></a>
 </body>
 </html>
