Wrap all content

--- a/index.html
+++ b/index.html
@@ -11,33 +11,34 @@
   <title>José Gersain</title>
 </head>
 <body>
-  <header class="header">
-    <img src="./images/LOGO.png" width="70" height="20" alt="Logo">
-    <button class="button" aria-label="Curriculum">Curriculum</button>
-  </header>
-
-  <section class="hero">
-    <div class="hero-image">
-      <picture>
-        <img src="./images/photo.jpg" alt="Foto de perfil" width="328">
-      </picture>
-    </div>
-    <div class="hero-description">
-      <h1>
-        <span>¡Hola 👽! soy</span>
-        <span>José Gersain</span>
-      </h1>
-      <p>
-        Vivo en el país de la esperanza (México), estudié la carrera de Ingeniería en Computación más por casualidad que por decisión, sin embargo, ha sido una de las mejores cosas que me han pasado. Actualmente soy estudiante del tercer semestre de la Maestría en Informática Administrativa, soy developer, soy un desastre en ocasiones, dibujante de ocasión, hijo de unos padres increíbles que siempre me han apoyado, hermano de un excéntrico y talentoso diseñador gráfico, pero sobre todo soy alguien que siempre busca aprender, compartir, ayudar y disfrutar en todo este mar de código llamado mundo. PD: practico guitarra los domingos.
-      </p>
-      <div class="hero-social">
-        <a class="button-icon" href="tel:5549361867"><img src="./images/icon-phone.svg" alt="icono telefono"></a>
-        <a class="button-icon" href=""><img src="./images/icon-important_mail.svg" alt="icono mail"></a>
-        <a class="button-icon" href=""><img src="./images/icon-instagram.svg" alt="icono instagram"></a>
-        <a class="button-icon" href=""><img src="./images/icon-twitter_squared.svg" alt="icono twitter"></a>
+  <div class="wrapper">
+    <header class="header">
+      <img src="./images/LOGO.png" width="70" height="20" alt="Logo">
+      <button class="button" aria-label="Curriculum">Curriculum</button>
+    </header>
+    <section class="hero">
+      <div class="hero-image">
+        <picture>
+          <img src="./images/photo.jpg" alt="Foto de perfil" width="328">
+        </picture>
       </div>
-      <a href="http://www.bitso.com" class="button">Descargar curriculum</a>
-    </div>
-  </section>
+      <div class="hero-description">
+        <h1>
+          <span>¡Hola 👽! soy</span>
+          <span>José Gersain</span>
+        </h1>
+        <p>
+          Vivo en el país de la esperanza (México), estudié la carrera de Ingeniería en Computación más por casualidad que por decisión, sin embargo, ha sido una de las mejores cosas que me han pasado. Actualmente soy estudiante del tercer semestre de la Maestría en Informática Administrativa, soy developer, soy un desastre en ocasiones, dibujante de ocasión, hijo de unos padres increíbles que siempre me han apoyado, hermano de un excéntrico y talentoso diseñador gráfico, pero sobre todo soy alguien que siempre busca aprender, compartir, ayudar y disfrutar en todo este mar de código llamado mundo. PD: practico guitarra los domingos.
+        </p>
+        <div class="hero-social">
+          <a class="button-icon" href="tel:5549361867"><img src="./images/icon-phone.svg" alt="icono telefono"></a>
+          <a class="button-icon" href=""><img src="./images/icon-important_mail.svg" alt="icono mail"></a>
+          <a class="button-icon" href=""><img src="./images/icon-instagram.svg" alt="icono instagram"></a>
+          <a class="button-icon" href=""><img src="./images/icon-twitter_squared.svg" alt="icono twitter"></a>
+        </div>
+        <a href="http://www.bitso.com" class="button">Descargar curriculum</a>
+      </div>
+    </section>
+  </div>
 </body>
 </html>
