--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="hero">
       <div class="hero-image">
         <picture>
-          <img src="./images/photo.jpg" alt="Foto de perfil" width="328">
+          <img src="./images/user.png" alt="Foto de perfil" width="328">
         </picture>
       </div>
       <div class="hero-description">
@@ -28,17 +28,16 @@
           <span>José Gersain</span>
         </h1>
         <p>
-          Vivo en el país de la esperanza (México), estudié la carrera de Ingeniería en Computación más por casualidad que por decisión, sin embargo, ha sido una de las mejores cosas que me han pasado. Actualmente soy estudiante del tercer semestre de la Maestría en Informática Administrativa, soy developer, soy un desastre en ocasiones, dibujante de ocasión, hijo de unos padres increíbles que siempre me han apoyado, hermano de un excéntrico y talentoso diseñador gráfico, pero sobre todo soy alguien que siempre busca aprender, compartir, ayudar y disfrutar en todo este mar de código llamado mundo. PD: practico guitarra los domingos.
+          Soy developer, dibujante de ocasión, hijo de unos padres increíbles que siempre me han apoyado, pero sobre todo soy alguien que siempre busca aprender, compartir, ayudar y disfrutar en todo este mar de código llamado mundo.
         </p>
         <div class="hero-social">
           <a class="button-icon" href="tel:5549361867"><img src="./images/icon-phone.svg" alt="icono telefono"></a>
           <a class="button-icon" href=""><img src="./images/icon-important_mail.svg" alt="icono mail"></a>
           <a class="button-icon" href=""><img src="./images/icon-instagram.svg" alt="icono instagram"></a>
-          <a class="button-icon" href=""><img src="./images/icon-twitter_squared.svg" alt="icono twitter"></a>
+          <a class="button-icon" href="https://twitter.com/jhersein"><img src="./images/icon-twitter_squared.svg" alt="icono twitter"></a>
         </div>
         <a href="http://www.bitso.com" class="button">Descargar curriculum</a>
       </div>
-    </section>
   </div>
 </body>
 </html>
