Add menu component

--- a/index.html
+++ b/index.html
@@ -14,9 +14,22 @@
   <div class="wrapper">
     <header class="header">
       <img src="./images/LOGO.png" width="70" height="20" alt="Logo">
+      <nav class="menu">
+        <ul>
+          <li>
+            <a class="is-active" href="#main">Inicio</a>
+          </li>
+          <li>
+            <a href="#projects">Proyectos</a>
+          </li>
+          <li>
+            <a href="#contact">Contacto</a>
+          </li>
+        </ul>
+      </nav>
       <button class="button" aria-label="Curriculum">Curriculum</button>
     </header>
-    <section class="hero">
+    <section class="hero" id="main">
       <div class="hero-image">
         <picture>
           <img src="./images/user.png" alt="Foto de perfil" width="328">
