--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
   <title>José Gersain</title>
 </head>
 <body>
+  <header class="header">
+    <img src="./images/LOGO.png" width="70" height="20" alt="Logo">
+    <nav class="menu">
+      <ul>
+        <li>
+          <a class="is-active" href="#main">Inicio</a>
+        </li>
+        <li>
+          <a href="#projects">Proyectos</a>
+        </li>
+        <li>
+          <a href="#contact">Contacto</a>
+        </li>
+      </ul>
+    </nav>
+    <button class="button" aria-label="Curriculum">Curriculum</button>
+  </header>
   <div class="wrapper">
-    <header class="header">
-      <img src="./images/LOGO.png" width="70" height="20" alt="Logo">
-      <nav class="menu">
-        <ul>
-          <li>
-            <a class="is-active" href="#main">Inicio</a>
-          </li>
-          <li>
-            <a href="#projects">Proyectos</a>
-          </li>
-          <li>
-            <a href="#contact">Contacto</a>
-          </li>
-        </ul>
-      </nav>
-      <button class="button" aria-label="Curriculum">Curriculum</button>
-    </header>
     <section class="hero" id="main">
       <div class="hero-image">
         <picture>
@@ -51,6 +51,7 @@
         </div>
         <a href="http://www.bitso.com" class="button">Descargar curriculum</a>
       </div>
+    </section>
   </div>
 </body>
 </html>
