Add welcome projects message

--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
         <a href="http://www.bitso.com" class="button">Descargar curriculum</a>
       </div>
     </section>
+    <section id="projects">
+      <div class="projects-welcome">
+        <p>A lo largo de mi carrera como developer he tenido el privilegio de trabajar en proyectos retadores e increíbles</p>
+        <h5>Aquí hay algunos que me gustaría compartir.</h5>
+        <img src="./images/arrow-down.svg" alt="icono flecha">
+      </div>
+    </section>
   </div>
 </body>
 </html>
