--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <span>José Gersain</span>
         </h1>
         <p>
-          Soy developer, dibujante de ocasión, hijo de unos padres increíbles que siempre me han apoyado, pero sobre todo soy alguien que siempre busca aprender, compartir, ayudar y disfrutar en todo este mar de código llamado mundo.
+          Estudié la carrera de Ingeniería en Computación más por casualidad que por decisión, sin embargo, ha sido una de las mejores cosas que me han pasado. Soy developer, dibujante de ocasión, hijo de unos padres increíbles que siempre me han apoyado, pero sobre todo soy alguien que siempre busca aprender, compartir, ayudar y disfrutar en todo este mar de código llamado mundo.
         </p>
         <div class="hero-social">
           <a class="button-icon" href="tel:5549361867"><img src="./images/icon-phone.svg" alt="icono telefono"></a>
@@ -54,7 +54,9 @@
     </section>
     <section id="projects">
       <div class="projects-welcome">
-        <p>A lo largo de mi carrera como developer he tenido el privilegio de trabajar en proyectos retadores e increíbles</p>
+        <p>
+          A lo largo de mi carrera como desarrollador de software he tenido el privilegio de trabajar en proyectos retadores e increíbles
+        </p>
         <h5>Aquí hay algunos que me gustaría compartir.</h5>
         <img src="./images/arrow-down.svg" alt="icono flecha">
       </div>
