Add testimony section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="hero-description">
         <h1>
           <span>¡Hola 👽! soy</span>
-          <span>José Gersain</span>
+          <span class="gradient-text">José Gersain</span>
         </h1>
         <p>
           Estudié la carrera de Ingeniería en Computación más por casualidad que por decisión, sin embargo, ha sido una de las mejores cosas que me han pasado. Soy developer, dibujante de ocasión, hijo de unos padres increíbles que siempre me han apoyado, pero sobre todo soy alguien que siempre busca aprender, compartir, ayudar y disfrutar en todo este mar de código llamado mundo.
@@ -59,6 +59,18 @@
         </p>
         <h5>Aquí hay algunos que me gustaría compartir.</h5>
         <img src="./images/arrow-down.svg" alt="icono flecha">
+      </div>
+      <div class="testimony">
+        <div class="testimony-comment">
+          <img src="./images/user-testimony.png" alt="avatar usuario">
+          <p>
+            "José Gersain ha sido de gran ayuda para acelerar ciertos esfuerzos de desarrollo. Lo que nos hubiera llevado 6 meses, solo les llevó 1,5 meses".
+          </p>
+          <span>
+            Leaonidad Esteban / Cofundador y CEO
+            leonidasesteban.com
+          </span>
+        </div>
       </div>
     </section>
   </div>
