Change some classe names

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
         <img src="./images/arrow-down.svg" alt="icono flecha">
       </div>
       <div class="testimony">
-        <div class="testimony-comment">
+        
+      </div>
+      <div class="message">
+        <div class="message-comment">
           <img src="./images/user-testimony.png" alt="avatar usuario">
           <p>
             "José Gersain ha sido de gran ayuda para acelerar ciertos esfuerzos de desarrollo. Lo que nos hubiera llevado 6 meses, solo les llevó 1,5 meses".
