Add html markup for testimony

--- a/index.html
+++ b/index.html
@@ -61,7 +61,19 @@
         <img src="./images/arrow-down.svg" alt="icono flecha">
       </div>
       <div class="testimony">
-        
+        <div class="testimony-image">
+          <img src="./images/video-player.png" alt="imagen del proyecto">
+        </div>
+        <div class="testimony-description">
+          <a target="_blanck" href="https://jgersain.github.io/video-player/">Video Player</a>
+          <p>Lindo reproductor de video para disfrutar contenido a tu propio estilo.</p>
+          <a target="_blank" href="https://github.com/jgersain/video-player" class="button is-secondary">
+            Ver código
+          </a>
+          <a target="_black" href="https://jgersain.github.io/video-player/" class="button">
+            Ver proyecto
+          </a>
+        </div>
       </div>
       <div class="message">
         <div class="message-comment">
