Add correct links

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         </p>
         <div class="hero-social">
           <a class="button-icon" href="tel:5549361867"><img src="./images/icon-phone.svg" alt="icono telefono"></a>
-          <a class="button-icon" href=""><img src="./images/icon-important_mail.svg" alt="icono mail"></a>
-          <a class="button-icon" href=""><img src="./images/icon-instagram.svg" alt="icono instagram"></a>
-          <a class="button-icon" href="https://twitter.com/jhersein"><img src="./images/icon-twitter_squared.svg" alt="icono twitter"></a>
+          <a class="button-icon" href="mailto:jhersein@gmail.com"><img src="./images/icon-important_mail.svg" alt="icono mail"></a>
+          <a target="_blank" class="button-icon" href="https://www.instagram.com/jgersain/"><img src="./images/icon-instagram.svg" alt="icono instagram"></a>
+          <a target="_blank" class="button-icon" href="https://twitter.com/jhersein"><img src="./images/icon-twitter_squared.svg" alt="icono twitter"></a>
         </div>
-        <a href="http://www.bitso.com" class="button">Descargar curriculum</a>
+        <a target="_blank" href="http://www.bitso.com" class="button">Descargar curriculum</a>
       </div>
     </section>
     <section id="projects">
