Add testimony styles for mobile and desktop

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <img src="./images/video-player.png" alt="imagen del proyecto">
         </div>
         <div class="testimony-description">
-          <a target="_blanck" href="https://jgersain.github.io/video-player/">Video Player</a>
+          <a class="testimony-title" target="_blanck" href="https://jgersain.github.io/video-player/">Video Player</a>
           <p>Lindo reproductor de video para disfrutar contenido a tu propio estilo.</p>
           <a target="_blank" href="https://github.com/jgersain/video-player" class="button is-secondary">
             Ver código
@@ -75,7 +75,7 @@
           </a>
         </div>
       </div>
-      <div class="message">
+      <section class="message">
         <div class="message-comment">
           <img src="./images/user-testimony.png" alt="avatar usuario">
           <p>
@@ -86,7 +86,61 @@
             leonidasesteban.com
           </span>
         </div>
+      </section>
+      <div class="testimony">
+        <div class="testimony-image">
+          <img src="./images/video-player.png" alt="imagen del proyecto">
+        </div>
+        <div class="testimony-description">
+          <a class="testimony-title" target="_blanck" href="https://jgersain.github.io/video-player/">Video Player</a>
+          <p>Lindo reproductor de video para disfrutar contenido a tu propio estilo.</p>
+          <a target="_blank" href="https://github.com/jgersain/video-player" class="button is-secondary">
+            Ver código
+          </a>
+          <a target="_black" href="https://jgersain.github.io/video-player/" class="button">
+            Ver proyecto
+          </a>
+        </div>
       </div>
+      <section class="message">
+        <div class="message-comment">
+          <img src="./images/user-testimony.png" alt="avatar usuario">
+          <p>
+            "José Gersain ha sido de gran ayuda para acelerar ciertos esfuerzos de desarrollo. Lo que nos hubiera llevado 6 meses, solo les llevó 1,5 meses".
+          </p>
+          <span>
+            Leaonidad Esteban / Cofundador y CEO
+            leonidasesteban.com
+          </span>
+        </div>
+      </section>
+      <div class="testimony">
+        <div class="testimony-image">
+          <img src="./images/video-player.png" alt="imagen del proyecto">
+        </div>
+        <div class="testimony-description">
+          <a class="testimony-title" target="_blanck" href="https://jgersain.github.io/video-player/">Video Player</a>
+          <p>Lindo reproductor de video para disfrutar contenido a tu propio estilo.</p>
+          <a target="_blank" href="https://github.com/jgersain/video-player" class="button is-secondary">
+            Ver código
+          </a>
+          <a target="_black" href="https://jgersain.github.io/video-player/" class="button">
+            Ver proyecto
+          </a>
+        </div>
+      </div>
+      <section class="message">
+        <div class="message-comment">
+          <img src="./images/user-testimony.png" alt="avatar usuario">
+          <p>
+            "José Gersain ha sido de gran ayuda para acelerar ciertos esfuerzos de desarrollo. Lo que nos hubiera llevado 6 meses, solo les llevó 1,5 meses".
+          </p>
+          <span>
+            Leaonidad Esteban / Cofundador y CEO
+            leonidasesteban.com
+          </span>
+        </div>
+      </section>
     </section>
   </div>
 </body>
