Add html footer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <button class="button" aria-label="Curriculum">Curriculum</button>
   </header>
   <div class="wrapper">
-    <section class="hero" id="main">
+    <section class="hero" id="main" aria-label="main">
       <div class="hero-image">
         <picture>
           <img src="./images/user.png" alt="Foto de perfil" width="328">
@@ -43,7 +43,7 @@
         <p>
           Estudié la carrera de Ingeniería en Computación más por casualidad que por decisión, sin embargo, ha sido una de las mejores cosas que me han pasado. Soy developer, dibujante de ocasión, hijo de unos padres increíbles que siempre me han apoyado, pero sobre todo soy alguien que siempre busca aprender, compartir, ayudar y disfrutar en todo este mar de código llamado mundo.
         </p>
-        <div class="hero-social">
+        <div class="social">
           <a class="button-icon" href="tel:5549361867"><img src="./images/icon-phone.svg" alt="icono telefono"></a>
           <a class="button-icon" href="mailto:jhersein@gmail.com"><img src="./images/icon-important_mail.svg" alt="icono mail"></a>
           <a target="_blank" class="button-icon" href="https://www.instagram.com/jgersain/"><img src="./images/icon-instagram.svg" alt="icono instagram"></a>
@@ -142,6 +142,21 @@
         </div>
       </section>
     </section>
+    <footer class="footer">
+      <div class="footer-logo">
+        <img src="./images/LOGO.png" width="70" height="20" alt="Logo">
+      </div>
+      <div class="social">
+        <a class="button-icon" href="tel:5549361867"><img src="./images/icon-phone.svg" alt="icono telefono"></a>
+        <a class="button-icon" href="mailto:jhersein@gmail.com"><img src="./images/icon-important_mail.svg" alt="icono mail"></a>
+        <a target="_blank" class="button-icon" href="https://www.instagram.com/jgersain/"><img src="./images/icon-instagram.svg" alt="icono instagram"></a>
+        <a target="_blank" class="button-icon" href="https://twitter.com/jhersein"><img src="./images/icon-twitter_squared.svg" alt="icono twitter"></a>
+      </div>
+      <div class="footer-copyright">
+        <p>Hecho con 🤍 de jgersain.</p>
+        <p>Copyright 2021 - Todos los derechos reservados.</p>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
