--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <a target="_blank" class="button-icon" href="https://twitter.com/jhersein"><img src="./images/icon-twitter_squared.svg" alt="icono twitter"></a>
       </div>
       <div class="footer-copyright">
-        <p>Hecho con 🤍 de jgersain.</p>
+        <p>Hecho con el 🤍 de jgersain.</p>
         <p>Copyright 2021 - Todos los derechos reservados.</p>
       </div>
     </footer>
