Add contact form

--- a/index.html
+++ b/index.html
@@ -142,6 +142,15 @@
         </div>
       </section>
     </section>
+    <form class="form-contact" action="" id="contact" method="POST">
+      <label for="form-name">Nombre completo</label>
+      <input type="text" placeholder="John Connor" id="form-name" name="name" required>
+      <label for="form-email">Correo electrónico</label>
+      <input type="email" placeholder="john@connor.com" id="form-email" name="email" required>
+      <label for="form-message">Mensaje</label>
+      <textarea name="message" id="form-message" cols="30" rows="7" placeholder="Dejame un mensaje" required></textarea>
+      <button class="button">Enviar mensaje</button>
+    </form>
     <footer class="footer">
       <div class="footer-logo">
         <img src="./images/LOGO.png" width="70" height="20" alt="Logo">
@@ -153,7 +162,7 @@
         <a target="_blank" class="button-icon" href="https://twitter.com/jhersein"><img src="./images/icon-twitter_squared.svg" alt="icono twitter"></a>
       </div>
       <div class="footer-copyright">
-        <p>Hecho con el 🤍 de jgersain.</p>
+        <p>Hecho con el 💜 de jgersain.</p>
         <p>Copyright 2021 - Todos los derechos reservados.</p>
       </div>
     </footer>
