Style constact form

--- a/index.html
+++ b/index.html
@@ -143,13 +143,22 @@
       </section>
     </section>
     <form class="form-contact" action="" id="contact" method="POST">
-      <label for="form-name">Nombre completo</label>
-      <input type="text" placeholder="John Connor" id="form-name" name="name" required>
-      <label for="form-email">Correo electrónico</label>
-      <input type="email" placeholder="john@connor.com" id="form-email" name="email" required>
-      <label for="form-message">Mensaje</label>
-      <textarea name="message" id="form-message" cols="30" rows="7" placeholder="Dejame un mensaje" required></textarea>
-      <button class="button">Enviar mensaje</button>
+      <h2>Hablemos</h2>
+      <p>Si está interesado en trabajar conmigo en su próximo proyecto, 
+        no dude en ponerse en contacto conmigo.</p>
+      <label for="form-name">
+        Nombre completo
+        <input type="text" placeholder="John Connor" id="form-name" name="name" required>
+      </label>
+      <label for="form-email">
+        Correo electrónico
+        <input type="email" placeholder="john@connor.com" id="form-email" name="email" required>
+      </label>
+      <label for="form-message">
+        Mensaje
+        <textarea name="message" id="form-message" cols="30" rows="7" placeholder="Dejame un mensaje" required></textarea>
+      </label>
+      <button class="button" type="submit">Enviar mensaje</button>
     </form>
     <footer class="footer">
       <div class="footer-logo">
