Create title component

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <img src="./images/video-player.png" alt="imagen del proyecto">
         </div>
         <div class="testimony-description">
-          <a class="testimony-title" target="_blanck" href="https://jgersain.github.io/video-player/">Video Player</a>
+          <a class="title" target="_blanck" href="https://jgersain.github.io/video-player/">Video Player</a>
           <p>Lindo reproductor de video para disfrutar contenido a tu propio estilo.</p>
           <a target="_blank" href="https://github.com/jgersain/video-player" class="button is-secondary">
             Ver código
@@ -92,7 +92,7 @@
           <img src="./images/video-player.png" alt="imagen del proyecto">
         </div>
         <div class="testimony-description">
-          <a class="testimony-title" target="_blanck" href="https://jgersain.github.io/video-player/">Video Player</a>
+          <a class="title" target="_blanck" href="https://jgersain.github.io/video-player/">Video Player</a>
           <p>Lindo reproductor de video para disfrutar contenido a tu propio estilo.</p>
           <a target="_blank" href="https://github.com/jgersain/video-player" class="button is-secondary">
             Ver código
@@ -119,7 +119,7 @@
           <img src="./images/video-player.png" alt="imagen del proyecto">
         </div>
         <div class="testimony-description">
-          <a class="testimony-title" target="_blanck" href="https://jgersain.github.io/video-player/">Video Player</a>
+          <a class="title" target="_blanck" href="https://jgersain.github.io/video-player/">Video Player</a>
           <p>Lindo reproductor de video para disfrutar contenido a tu propio estilo.</p>
           <a target="_blank" href="https://github.com/jgersain/video-player" class="button is-secondary">
             Ver código
@@ -143,7 +143,7 @@
       </section>
     </section>
     <form class="form-contact" action="" id="contact" method="POST">
-      <h2>Hablemos</h2>
+      <h2 class="title">Hablemos</h2>
       <p>Si está interesado en trabajar conmigo en su próximo proyecto, 
         no dude en ponerse en contacto conmigo.</p>
       <label for="form-name">
