--- a/index.html
+++ b/index.html
@@ -161,18 +161,20 @@
       <button class="button" type="submit">Enviar mensaje</button>
     </form>
     <footer class="footer">
-      <div class="footer-logo">
-        <img src="./images/LOGO.png" width="70" height="20" alt="Logo">
-      </div>
-      <div class="social">
-        <a class="button-icon" href="tel:5549361867"><img src="./images/icon-phone.svg" alt="icono telefono"></a>
-        <a class="button-icon" href="mailto:jhersein@gmail.com"><img src="./images/icon-important_mail.svg" alt="icono mail"></a>
-        <a target="_blank" class="button-icon" href="https://www.instagram.com/jgersain/"><img src="./images/icon-instagram.svg" alt="icono instagram"></a>
-        <a target="_blank" class="button-icon" href="https://twitter.com/jhersein"><img src="./images/icon-twitter_squared.svg" alt="icono twitter"></a>
-      </div>
-      <div class="footer-copyright">
-        <p>Hecho con el 💜 de jgersain.</p>
-        <p>Copyright 2021 - Todos los derechos reservados.</p>
+      <div class="footer-content">
+        <div class="footer-logo">
+          <img src="./images/LOGO.png" width="70" height="20" alt="Logo">
+        </div>
+        <div class="social">
+          <a class="button-icon" href="tel:5549361867"><img src="./images/icon-phone.svg" alt="icono telefono"></a>
+          <a class="button-icon" href="mailto:jhersein@gmail.com"><img src="./images/icon-important_mail.svg" alt="icono mail"></a>
+          <a target="_blank" class="button-icon" href="https://www.instagram.com/jgersain/"><img src="./images/icon-instagram.svg" alt="icono instagram"></a>
+          <a target="_blank" class="button-icon" href="https://twitter.com/jhersein"><img src="./images/icon-twitter_squared.svg" alt="icono twitter"></a>
+        </div>
+        <div class="footer-copyright">
+          <p>Hecho con el 💜 de jgersain.</p>
+          <p>Copyright 2021 - Todos los derechos reservados.</p>
+        </div>
       </div>
     </footer>
   </div>
