Margin collapse betweent form and footer component

--- a/index.html
+++ b/index.html
@@ -142,23 +142,25 @@
         </div>
       </section>
     </section>
-    <form class="form-contact" action="" id="contact" method="POST">
-      <h2 class="title">Hablemos</h2>
-      <p>Si está interesado en trabajar conmigo en su próximo proyecto, 
-        no dude en ponerse en contacto conmigo.</p>
-      <label for="form-name">
-        Nombre completo
-        <input type="text" placeholder="John Connor" id="form-name" name="name" required>
-      </label>
-      <label for="form-email">
-        Correo electrónico
-        <input type="email" placeholder="john@connor.com" id="form-email" name="email" required>
-      </label>
-      <label for="form-message">
-        Mensaje
-        <textarea name="message" id="form-message" cols="30" rows="7" placeholder="Dejame un mensaje" required></textarea>
-      </label>
-      <button class="button" type="submit">Enviar mensaje</button>
+    <form class="form" action="" id="contact" method="POST">
+      <div class="form-content">
+        <h2 class="title">Hablemos</h2>
+        <p>Si está interesado en trabajar conmigo en su próximo proyecto, 
+          no dude en ponerse en contacto conmigo.</p>
+        <label for="form-name">
+          Nombre completo
+          <input type="text" placeholder="John Connor" id="form-name" name="name" required>
+        </label>
+        <label for="form-email">
+          Correo electrónico
+          <input type="email" placeholder="john@connor.com" id="form-email" name="email" required>
+        </label>
+        <label for="form-message">
+          Mensaje
+          <textarea name="message" id="form-message" cols="30" rows="7" placeholder="Dejame un mensaje" required></textarea>
+        </label>
+        <button class="button" type="submit">Enviar mensaje</button>
+      </div>
     </form>
     <footer class="footer">
       <div class="footer-content">
