--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
 </head>
 <body>
   <header class="header">
-    <img src="./images/LOGO.png" width="70" height="20" alt="Logo">
-    <nav class="menu">
-      <ul>
-        <li>
-          <a class="is-active" href="#main">Inicio</a>
-        </li>
-        <li>
-          <a href="#projects">Proyectos</a>
-        </li>
-        <li>
-          <a href="#contact">Contacto</a>
-        </li>
-      </ul>
-    </nav>
-    <button class="button" aria-label="Curriculum">Curriculum</button>
+    <div class="header-content">
+      <img src="./images/LOGO.png" width="70" height="20" alt="Logo">
+      <nav class="menu">
+        <ul>
+          <li>
+            <a class="is-active" href="#main">Inicio</a>
+          </li>
+          <li>
+            <a href="#projects">Proyectos</a>
+          </li>
+          <li>
+            <a href="#contact">Contacto</a>
+          </li>
+        </ul>
+      </nav>
+      <button class="button" aria-label="Curriculum">Curriculum</button>
+    </div>
   </header>
   <div class="wrapper">
     <section class="hero" id="main" aria-label="main">
