--- a/index.html
+++ b/index.html
@@ -62,19 +62,21 @@
         <h5>Aquí hay algunos que me gustaría compartir.</h5>
         <img src="./images/arrow-down.svg" alt="icono flecha">
       </div>
-      <div class="testimony">
-        <div class="testimony-image">
+      <div class="project">
+        <div class="project-image">
           <img src="./images/video-player.png" alt="imagen del proyecto">
         </div>
-        <div class="testimony-description">
+        <div class="project-description">
           <a class="title" target="_blanck" href="https://jgersain.github.io/video-player/">Video Player</a>
           <p>Lindo reproductor de video para disfrutar contenido a tu propio estilo.</p>
-          <a target="_blank" href="https://github.com/jgersain/video-player" class="button is-secondary">
-            Ver código
-          </a>
-          <a target="_black" href="https://jgersain.github.io/video-player/" class="button">
-            Ver proyecto
-          </a>
+          <div class="project-actions">
+            <a target="_black" href="https://jgersain.github.io/video-player/" class="button">
+              Ver proyecto
+            </a>
+            <a target="_blank" href="https://github.com/jgersain/video-player" class="button is-secondary">
+              Ver código
+            </a>
+          </div>
         </div>
       </div>
       <section class="message">
@@ -89,19 +91,21 @@
           </span>
         </div>
       </section>
-      <div class="testimony">
-        <div class="testimony-image">
+      <div class="project">
+        <div class="project-image">
           <img src="./images/video-player.png" alt="imagen del proyecto">
         </div>
-        <div class="testimony-description">
+        <div class="project-description">
           <a class="title" target="_blanck" href="https://jgersain.github.io/video-player/">Video Player</a>
           <p>Lindo reproductor de video para disfrutar contenido a tu propio estilo.</p>
-          <a target="_blank" href="https://github.com/jgersain/video-player" class="button is-secondary">
-            Ver código
-          </a>
-          <a target="_black" href="https://jgersain.github.io/video-player/" class="button">
-            Ver proyecto
-          </a>
+          <div class="project-actions">
+            <a target="_black" href="https://jgersain.github.io/video-player/" class="button">
+              Ver proyecto
+            </a>
+            <a target="_blank" href="https://github.com/jgersain/video-player" class="button is-secondary">
+              Ver código
+            </a>
+          </div>
         </div>
       </div>
       <section class="message">
@@ -116,19 +120,21 @@
           </span>
         </div>
       </section>
-      <div class="testimony">
-        <div class="testimony-image">
+      <div class="project">
+        <div class="project-image">
           <img src="./images/video-player.png" alt="imagen del proyecto">
         </div>
-        <div class="testimony-description">
+        <div class="project-description">
           <a class="title" target="_blanck" href="https://jgersain.github.io/video-player/">Video Player</a>
           <p>Lindo reproductor de video para disfrutar contenido a tu propio estilo.</p>
-          <a target="_blank" href="https://github.com/jgersain/video-player" class="button is-secondary">
-            Ver código
-          </a>
-          <a target="_black" href="https://jgersain.github.io/video-player/" class="button">
-            Ver proyecto
-          </a>
+          <div class="project-actions">
+            <a target="_black" href="https://jgersain.github.io/video-player/" class="button">
+              Ver proyecto
+            </a>
+            <a target="_blank" href="https://github.com/jgersain/video-player" class="button is-secondary">
+              Ver código
+            </a>
+          </div>
         </div>
       </div>
       <section class="message">
