Submit form with formspree

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
       </section>
     </section>
-    <form class="form" action="" id="contact" method="POST">
+    <form class="form" action="https://formspree.io/f/xdoywwzr" id="contact" method="POST">
       <div class="form-content">
         <h2 class="title">Hablemos</h2>
         <p>Si está interesado en trabajar conmigo en su próximo proyecto, 
@@ -168,6 +168,7 @@
           <textarea name="message" id="form-message" cols="30" rows="7" placeholder="Dejame un mensaje" required></textarea>
         </label>
         <button class="button" type="submit">Enviar mensaje</button>
+        <p id="form-status"></p>
       </div>
     </form>
     <footer class="footer">
@@ -182,11 +183,12 @@
           <a target="_blank" class="button-icon" href="https://twitter.com/jhersein"><img src="./images/icon-twitter_squared.svg" alt="icono twitter"></a>
         </div>
         <div class="footer-copyright">
-          <p>Hecho con el 💜 de jgersain.</p>
+          <p>Hecho con 🤍.</p>
           <p>Copyright 2021 - Todos los derechos reservados.</p>
         </div>
       </div>
     </footer>
   </div>
+  <script src="./js/main.js"></script>
 </body>
 </html>
